finished seeting nav bar

--- a/index.html
+++ b/index.html
@@ -7,62 +7,80 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
     <script src="./index.js"></script>
-    <title>Instagram</title>
+    <link rel="icon" href="./instagram.png">
 </head>
 
 <body>
-    <header>
-        <div class="profile">
-            <img src="./profile.jpg" alt="profile image">
-            <div class="profile-info">
-                <div class="profile-info-top">
-                    <p>__emergomes</p>
-                    <button>Editar perfil</button>
-                    <img src="./setting_icon.png" alt="settings">
-                </div>
-                <div class="profile-info-bottom">
-                    <p># publicações</p>
-                    <p>6 seguidores</p>
-                    <p>27 seguidores</p>
-                </div>
-                <div class="user-name-pronouns">
-                    <p>Emerson Lima</p>
-                    <p>ele/dele</p>
+    <nav>
+        <img src="./title.png" alt="intagram name" class="instagram">
+        <div>
+            <p>Página Inicial</p>
+            <p>Pesquisa</p>
+            <p>Explorar</p>
+            <p>Reels</p>
+            <p>Mensagens</p>
+            <p>Notificações</p>
+            <p>Criar</p>
+            <p>Perfil</p>
+            <p>Mais</p>
+        </div>
+    </nav>
+    <div>
+        <header>
+            <div class="profile">
+                <img src="./profile.jpg" alt="profile image">
+                <div class="profile-info">
+                    <div class="profile-info-top">
+                        <p>__emergomes</p>
+                        <button>Editar perfil</button>
+                        <img src="./setting_icon.png" alt="settings">
+                    </div>
+                    <div class="profile-info-bottom">
+                        <p># publicações</p>
+                        <p>6 seguidores</p>
+                        <p>27 seguidores</p>
+                    </div>
+                    <div class="user-name-pronouns">
+                        <p>Emerson Lima</p>
+                        <p>ele/dele</p>
+                    </div>
                 </div>
             </div>
-        </div>
-    </header>
-    <main>
-        <div class="tabs">
-            <p>PUBLICAÇÕES</p>
-            <p>SALVOS</p>
-            <p>MARCADOS</p>
-        </div>
-        <div class="grid-container-post">
-            <img src="./post.jpg" alt="">
-            <img src="./post.jpg" alt="">
-            <img src="./post.jpg" alt="">
-            <img src="./post.jpg" alt="">
-            <img src="./post.jpg" alt="">
-            <img src="./post.jpg" alt="">
-            <img src="./post.jpg" alt="">
-        </div>
-    </main>
-    <footer>
-        <p>Meta</p>
-        <p>Sobre</p>
-        <p>Blog</p>
-        <p>Carreiras</p>
-        <p>Ajuda</p>
-        <p>API</p>
-        <p>Privacidade</p>
-        <p>Termos</p>
-        <p>Principais contas</p>
-        <p>Localizações</p>
-        <p>Instagram Lite</p>
-        <p>Carregamento de contatos e não usuários</p>
-        <p>Meta Verified</p>
-    </footer>
+        </header>
+        <main>
+            <div class="tabs">
+                <div>
+                    <p>PUBLICAÇÕES</p>
+                    <p>SALVOS</p>
+                    <p>MARCADOS</p>
+                </div>
+            </div>
+            <div class="grid-container-post">
+                <div><img src="./post.jpg" alt="post"></div>
+                <div><img src="./post.jpg" alt="post"></div>
+                <div><img src="./post.jpg" alt="post"></div>
+                <div><img src="./post.jpg" alt="post"></div>
+                <div><img src="./post.jpg" alt="post"></div>
+                <div><img src="./post.jpg" alt="post"></div>
+                <div><img src="./post.jpg" alt="post"></div>
+            </div>
+        </main>
+        <footer>
+            <p>Meta</p>
+            <p>Sobre</p>
+            <p>Blog</p>
+            <p>Carreiras</p>
+            <p>Ajuda</p>
+            <p>API</p>
+            <p>Privacidade</p>
+            <p>Termos</p>
+            <p>Principais contas</p>
+            <p>Localizações</p>
+            <p>Instagram Lite</p>
+            <p>Carregamento de contatos e não usuários</p>
+            <p>Meta Verified</p>
+        </footer>
+    </div>
 </body>
 
 </html>
