--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
     <script src="./index.js"></script>
-    <link rel="icon" href="./instagram.png">
+    <link rel="icon" href="./assets/instagram.png">
 </head>
 
 <body>
     <nav>
-        <img src="./title.png" alt="intagram name" class="instagram">
+        <img src="./assets/title.png" alt="intagram name" class="instagram">
         <div>
             <p>Página Inicial</p>
             <p>Pesquisa</p>
@@ -28,12 +28,12 @@
     <div>
         <header>
             <div class="profile">
-                <img src="./profile.jpg" alt="profile image">
+                <img src="./assets/profile.jpg" alt="profile image">
                 <div class="profile-info">
                     <div class="profile-info-top">
                         <p>__emergomes</p>
                         <button>Editar perfil</button>
-                        <img src="./setting_icon.png" alt="settings">
+                        <img src="./assets/setting_icon.png" alt="settings">
                     </div>
                     <div class="profile-info-bottom">
                         <p># publicações</p>
@@ -56,13 +56,13 @@
                 </div>
             </div>
             <div class="grid-container-post">
-                <div><img src="./post.jpg" alt="post"></div>
-                <div><img src="./post.jpg" alt="post"></div>
-                <div><img src="./post.jpg" alt="post"></div>
-                <div><img src="./post.jpg" alt="post"></div>
-                <div><img src="./post.jpg" alt="post"></div>
-                <div><img src="./post.jpg" alt="post"></div>
-                <div><img src="./post.jpg" alt="post"></div>
+                <div><img src="./assets/post.jpg" alt="post"></div>
+                <div><img src="./assets/post.jpg" alt="post"></div>
+                <div><img src="./assets/post.jpg" alt="post"></div>
+                <div><img src="./assets/post.jpg" alt="post"></div>
+                <div><img src="./assets/post.jpg" alt="post"></div>
+                <div><img src="./assets/post.jpg" alt="post"></div>
+                <div><img src="./assets/post.jpg" alt="post"></div>
             </div>
         </main>
         <footer>
