--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/nav.css">
+    <link rel="stylesheet" href="./styles/header.css">
     <script src="./index.js"></script>
     <link rel="icon" href="./assets/instagram.png">
 </head>
@@ -13,16 +15,43 @@
 <body>
     <nav>
         <img src="./assets/title.png" alt="intagram name" class="instagram">
-        <div>
-            <p>Página Inicial</p>
-            <p>Pesquisa</p>
-            <p>Explorar</p>
-            <p>Reels</p>
-            <p>Mensagens</p>
-            <p>Notificações</p>
-            <p>Criar</p>
-            <p>Perfil</p>
-            <p>Mais</p>
+        <div class="nav-bar">
+            <div>
+                <img src="./assets/home.png" alt="home" class="home">
+                <p>Página Inicial</p>
+            </div>
+            <div>
+                <img src="./assets/search.png" alt="search" class="search">
+                <p>Pesquisa</p>
+            </div>
+            <div>
+                <img src="./assets/explore.png" alt="explore" class="explore">
+                <p>Explorar</p>
+            </div>
+            <div>
+                <img src="./assets/reel.png" alt="reels" class="reels">
+                <p>Reels</p>
+            </div>
+            <div>
+                <img src="./assets/msg.png" alt="messages" class="messages">
+                <p>Mensagens</p>
+            </div>
+            <div>
+                <img src="./assets/heart.png" alt="notifications" class="notifications">
+                <p>Notificações</p>
+            </div>
+            <div>
+                <img src="./assets/create.png" alt="create" class="create">
+                <p>Criar</p>
+            </div>
+            <div>
+                <img src="./assets/profile.jpg" alt="profile img" class="nav-profile-pic">
+                <p>Perfil</p>
+            </div>
+            <div>
+                <img src="./assets/plus.png" alt="more" class="more">
+                <p>Mais</p>
+            </div>
         </div>
     </nav>
     <div>
@@ -38,7 +67,7 @@
                     <div class="profile-info-bottom">
                         <p># publicações</p>
                         <p>6 seguidores</p>
-                        <p>27 seguidores</p>
+                        <p>27 seguindo</p>
                     </div>
                     <div class="user-name-pronouns">
                         <p>Emerson Lima</p>
@@ -49,10 +78,19 @@
         </header>
         <main>
             <div class="tabs">
-                <div>
-                    <p>PUBLICAÇÕES</p>
-                    <p>SALVOS</p>
-                    <p>MARCADOS</p>
+                <div class="tabs-inner-cont">
+                    <div>
+                        <img src="./assets/grid-white.png" alt="grid" class="grid">
+                        <p>PUBLICAÇÕES</p>
+                    </div>
+                    <div>
+                        <img src="./assets/bookmark.png" alt=" bookmark" class="bookmark">
+                        <p>SALVOS</p>
+                    </div>
+                    <div>
+                        <img src="./assets/tag_gray.png" alt="tag" class="tag">
+                        <p>MARCADOS</p>
+                    </div>
                 </div>
             </div>
             <div class="grid-container-post">
