final touch ups

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/nav.css">
     <link rel="stylesheet" href="./styles/header.css">
-    <script src="./index.js"></script>
+    <link rel="stylesheet" href="./styles/post.css">
     <link rel="icon" href="./assets/instagram.png">
 </head>
 
@@ -65,7 +65,7 @@
                         <img src="./assets/setting_icon.png" alt="settings">
                     </div>
                     <div class="profile-info-bottom">
-                        <p># publicações</p>
+                        <p>7 publicações</p>
                         <p>6 seguidores</p>
                         <p>27 seguindo</p>
                     </div>
@@ -79,28 +79,48 @@
         <main>
             <div class="tabs">
                 <div class="tabs-inner-cont">
-                    <div>
-                        <img src="./assets/grid-white.png" alt="grid" class="grid">
-                        <p>PUBLICAÇÕES</p>
-                    </div>
-                    <div>
-                        <img src="./assets/bookmark.png" alt=" bookmark" class="bookmark">
-                        <p>SALVOS</p>
-                    </div>
-                    <div>
-                        <img src="./assets/tag_gray.png" alt="tag" class="tag">
-                        <p>MARCADOS</p>
-                    </div>
+                    <a href="./index.html">
+                        <div class="publications">
+                            <img src="./assets/grid-white.png" alt="grid" class="grid">
+                            <p>PUBLICAÇÕES</p>
+                        </div>
+                    </a>
+                    <a href="./saved.html">
+                        <div class="save">
+                            <img src="./assets/bookmark.png" alt=" bookmark" class="bookmark">
+                            <p>SALVOS</p>
+                        </div>
+                    </a>
+                    <a href="./tagged.html">
+                        <div class="tagged">
+                            <img src="./assets/tag_gray.png" alt="tag" class="tag">
+                            <p>MARCADOS</p>
+                        </div>
+                    </a>
                 </div>
             </div>
             <div class="grid-container-post">
-                <div><img src="./assets/post.jpg" alt="post"></div>
-                <div><img src="./assets/post.jpg" alt="post"></div>
-                <div><img src="./assets/post.jpg" alt="post"></div>
-                <div><img src="./assets/post.jpg" alt="post"></div>
-                <div><img src="./assets/post.jpg" alt="post"></div>
-                <div><img src="./assets/post.jpg" alt="post"></div>
-                <div><img src="./assets/post.jpg" alt="post"></div>
+                <div>
+                    <img src="./assets/post.jpg" alt="post">
+                </div>
+                <div>
+                    <img src="./assets/post.jpg" alt="post">
+                </div>
+                <div>
+                    <img src="./assets/post.jpg" alt="post">
+                </div>
+                <div>
+                    <img src="./assets/post.jpg" alt="post">
+                </div>
+                <div>
+                    <img src="./assets/post.jpg" alt="post">
+                </div>
+                <div>
+                    <img src="./assets/post.jpg" alt="post">
+                </div>
+                <div>
+                    <img src="./assets/post.jpg" alt="post">
+                </div>
             </div>
         </main>
         <footer>
